trunk/Archive2/fd/5a06e49418547f/output
main.cpp: In function 'constexpr decimal_t operator""_dec(const char*, std::size_t)':
main.cpp:14:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int i=0; i<s; ++i){
                   ^
main.cpp:23:1: error: body of constexpr function 'constexpr decimal_t operator""_dec(const char*, std::size_t)' not a return-statement
 }
 ^
main.cpp: In function 'int main()':
main.cpp:26:29: error: 'constexpr decimal_t operator""_dec(const char*, std::size_t)' called in a constant expression
     constexpr decimal_t x = "123"_dec;
                             ^
